# Music_Search_MCP

./: .env.example  .gitignore  README.md  pyproject.toml
music_search_mcp/: __init__.py  cli.py  config.py  lastfm_client.py  lyrics_cache.py  lyrics_client.py  song_store.py  spotify_client.py  vector_store.py
